--- a/src/Drivers/reko.config
+++ b/src/Drivers/reko.config
@@ -446,7 +446,7 @@
         </Options>
       </Architecture>
       <Architecture Name="microBlaze" Description="MicroBlaze" Type="Reko.Arch.MicroBlaze.MicroBlazeArchitecture,Reko.Arch.MicroBlaze" />
-
+      <Architecture Name="arCompact" Description="ARCompact" Type="Reko.Arch.Arc.ARCompactArchitecture,Reko.Arch.Arc" />
       <Architecture Name="blackfin" Description="Analog Devices Blackfin" Type="Reko.Arch.Blackfin.BlackfinArchitecture,Reko.Arch.Blackfin" />
     </Architectures>
 
